<resources>
    <string name="app_name">Your Demon </string>
    <string name="header_subtitle">Professional WiFi &amp; Network Pentesting Suite</string>
    <string name="download_required">The app needs additional files to work. Tap to start the download!</string>
    <string name="hero_hint">Your all-in-one wireless security toolkit</string>
    <string name="account">Account </string>
    <string name="edit">Edit </string>
    <string name="account_hint">Your profile</string>
    <string name="app_version">Version: 2.1.1</string>
    <string name="links">Links</string>
    <string name="verified">Verified </string>
    <string name="coffee">Buy me a coffee </string>
    <string name="ethereum">Ethereum </string>
    <string name="bitcoin">Bitcoin </string>
    <string name="creditcard">Credit Card (UAH) </string>
    <string name="search">Search </string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer </string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer </string>
    <string name="nav_header_title">Your Demon </string>
    <string name="nav_header_subtitle">OPX </string>
    <string name="nav_header_desc" translatable="false">Navigation header </string>
    <string name="action_settings" translatable="false">Settings </string>
    <string name="drawer_open" translatable="false">Open navigation drawer </string>
    <string name="drawer_close" translatable="false">Close navigation drawer </string>
    <string name="version">Version: 2.1.1 </string>
    <string name="install">Install </string>
    <string name="instal1">Preparing… </string>
    <string name="check1">Permission request </string>
    <string name="check2">Checking Permissions </string>
    <string name="check3">Architecture check </string>
    <string name="check4">Checking Drivers </string>
    <string name="install2">Core loading </string>
    <string name="install3">Installing the Core </string>
    <string name="success">Successful installation </string>
    <string name="wait">Please wait </string>
    <string name="fail">Download failed, please check your internet connection </string>
    <string name="install_unpack">Unpacking the Core </string>
    <string name="local_scan">Scanning the local network may take some time, but the result will be 💣! </string>
    <string name="invalid_creds">Failed to login </string>
    <string name="no_results">No results found </string>
    <string name="ew_welcome">Welcome to the Add Exploit Wizard, please follow all the instructions and follow all the steps to successfully add. Click the "Continue" button to proceed to the next step. </string>
    <string name="ew_path">(/sdcard/YourDemon/exploits/) </string>
    <string name="select">Path to exploit: click to select </string>
    <string name="no_pattern">Attention, the application could not find such a line in the file. This may be due to a feature of the script or obfuscation. Are you sure you entered everything correctly? </string>
    <string name="warn">Warning </string>
    <string name="yes">Yes </string>
    <string name="no">Not </string>
    <string name="select_file">Please select a file from the list! </string>
    <string name="exploits">In the exploits section, you can add your own exploits and scripts, and then use them for their intended purpose. Automatic parameter detection supported </string>
    <string name="scanners">Here you can create or edit ready-made vulnerability scanners. You can combine protocol exploits to launch with one click. </string>
    <string name="exploits_title">Exploits </string>
    <string name="scanners_title">Scanners </string>
    <string name="tutorials">textbooks </string>
    <string name="add">Add </string>
    <string name="run">launch </string>
    <string name="exs">Exploits… </string>
    <string name="bit">Unfortunately, your device is 32-bit and does not support the required library! Please try other features of the app! </string>
    <string name="usb">USB device connected </string>
    <string name="noroot">Sorry, this app needs root permissions to work! </string>
    <string name="customvalue">Enter custom value </string>
    <string name="wifi">WiFi networks </string>
    <string name="dashboard">Home </string>
    <string name="wifi_networks">WiFi networks </string>
    <string name="local_network">Local network </string>
    <string name="handshakes">Handshakes </string>
    <string name="exploit_hub">Exploits </string>
    <string name="core_manager">Manager </string>
    <string name="modules_repo">Repository </string>
    <string name="app_setting">Settings </string>
    <string name="about_app">About </string>
    <string name="check_smb">Check SMB for vulnerabilities </string>
    <string name="check_rdp">Check RDP for vulnerabilities </string>
    <string name="check_camera">Check RTSP for vulnerabilities </string>
    <string name="check_admin">Check the panel for vulnerabilities </string>
    <string name="run_custom">Run custom exploit </string>
    <string name="list_of_ports">List of available ports </string>
    <string name="router_scan" translatable="false">Router Scan </string>
    <string name="integration">3wifi integration </string>
    <string name="nmap">Nmap Scanner </string>
    <string name="installed">Installed </string>
    <string name="online_repo">Online repository </string>
    <string name="scanning_wifi">Scanning Wi-Fi networks </string>
    <string name="no_inet">Sorry, I can\'t connect to the repository… </string>
    <string name="delcache">Removing cache… </string>
    <string name="download_apk">Loading app… </string>
    <string name="download_chroot">Loading chroot… </string>
    <string name="unmount">Unmounting the Core… </string>
    <string name="delchroot">Removing the old chroot… </string>
    <string name="installchroot">Installing a new chroot </string>
    <string name="installapk">Please install the requested apk! </string>
    <string name="tryagain">Try again </string>
    <string name="bruteforce_pin">Brute force PIN </string>
    <string name="connect_with_custom_pin">Connect with a PIN </string>
    <string name="bruteforce_password">Password Brute Force </string>
    <string name="try_capture_handshake">Handshake capture </string>
    <string name="deauth_clients">Client Deauthing </string>
    <string name="pixie_dust_attack">Pixie Dust attack </string>
    <string name="reload">Restart application </string>
    <string name="debug_desv">Hi, I\'m sorry you\'re having a problem! Please go through the entire installation path! After send off the file /YourDemon/log.txt to the developer! </string>
    <string name="debug_mode_title">Debug mode </string>
    <string name="debug_mode_on">Debug mode enabled! </string>
    <string name="noroot_perm">No root  </string>
    <string name="nonroot">Sorry this app can\'t work without root due to android limitation. How to get root? xda-developers.com/root! </string>
    <string name="no_storage">No storage permission </string>
    <string name="no_storage_desc">Sorry, this app can\'t work without storage permission! Click here to go to settings! </string>
    <string name="failed_try">Didn\'t work, try again! </string>
    <string name="reboot_update">A reboot is required for a safe update! </string>
    <string name="reboot">Reload </string>
    <string name="installing">Installation… </string>
    <string name="installedd">Installed </string>
    <string name="inst_error">Installation error </string>
    <string name="checking_inet">Checking internet connection… </string>
    <string name="no_inet_chroot">Core does not have access to the internet. This may cause errors in operation! </string>
    <string name="installingg">Installation… </string>
    <string name="get_exploitfile">Select script from files </string>
    <string name="path">Path: </string>
    <string name="please_file">Please choose a file! </string>
    <string name="copied">Copied to clipboard! </string>
    <string name="pass_founded">Password found: </string>
    <string name="select_word">Choose a dictionary </string>
    <string name="pass_not_found">Password not found </string>
    <string name="error_upload">File upload error! </string>
    <string name="file_was_uploaded">The file has already been uploaded before! </string>
    <string name="upload_success">The file has been successfully uploaded, please check your mail! </string>
    <string name="please_connect">Please connect to the network first! </string>
    <string name="scanning">Scanning in progress… </string>
    <string name="oops">Oops, looks like something went wrong! </string>
    <string name="deleting">Deleting… </string>
    <string name="finished">Finished </string>
    <string name="saved_to">The results are saved in routerscan.csv! </string>
    <string name="stop">Stop </string>
    <string name="start">Start </string>
    <string name="scan_finised">Scan completed! </string>
    <string name="scan_finished_desc">Scan completed! You can save the result with the icon at the top! </string>
    <string name="save">Save </string>
    <string name="saved_to_exp">Saved to exploits! </string>
    <string name="pin">Pin: </string>
    <string name="key">Key: </string>
    <string name="trying">Trying: </string>
    <string name="succes">Success! </string>
    <string name="speed">Speed: </string>
    <string name="spin">sec/pin </string>
    <string name="now">Now: </string>
    <string name="send_pin">Sending a Pin </string>
    <string name="target_locked">Target locked </string>
    <string name="m1">M1 Receive </string>
    <string name="m2">Sending M2… </string>
    <string name="enon">Received E-Nonce on target… </string>
    <string name="pkr">PKR received </string>
    <string name="pke">PKE received </string>
    <string name="authkey">AuthKey received </string>
    <string name="m4">Getting M4 </string>
    <string name="wps_pin">Getting a pincode </string>
    <string name="cant_find_netw">Sorry, I couldn\'t find the network. Swipe down to try again </string>
    <string name="error_inter">Interface error </string>
    <string name="disable_mon">Turn off monitoring mode </string>
    <string name="exploit_list">List of exploits </string>
    <string name="perms">Permissions </string>
    <string name="perms_desc">The application needs permissions:\n● Access to files\n● Root access\nThe application cannot work without them! </string>
    <string name="check">Check </string>
    <string name="term_title">Integration with termux </string>
    <string name="alpine_linux_termux_exit">Now you can work with Termux in Alpine Linux! To return to the Termux environment, it will be enough to write exit! </string>
    <string name="yeah_ok">Yes, Do it </string>
    <string name="thx_no">Perhaps, I will refuse </string>
    <string name="commands_manager">Commands Manager</string>
    <string name="vnc_viewer">VNC Viewer</string>
    <string name="no_exploits">No exploits added yet. Tap + to add one.</string>
    <string name="run_all">Run all</string>
    <string name="clear">Clear</string>
    <string name="evil_twin">Evil Twin</string>
    <string name="et_description">Create a rogue access point that clones a target network and captures passwords via a fake login page.</string>
    <string name="et_scan">Scan WiFi networks</string>
    <string name="et_ssid_hint">SSID to clone</string>
    <string name="et_channel_hint">Channel</string>
    <string name="et_bssid_hint">Target BSSID (for deauth)</string>
    <string name="et_ap_iface_hint">AP interface</string>
    <string name="et_mon_iface_hint">Monitor interface (for deauth)</string>
    <string name="et_deauth">Deauth the real network</string>
    <string name="target_ip">Target IP</string>
    <string name="port">Port</string>
    <string name="connect_vnc">Connect</string>
    <string name="start_vnc_server">Start VNC Server</string>
</resources>