<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slide_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_full_gradient"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/slide_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/storage"
        android:tint="@color/primary"
        android:padding="34dp"
        android:background="@drawable/circle_white"
        android:elevation="10dp"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slide_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:text="@string/perms"
        android:textColor="@color/white"
        android:gravity="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slide_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="14dp"
        android:padding="10dp"
        android:textColor="#F0E8D6"
        android:autoLink="web"
        android:textColorLink="@color/white"
        android:text="@string/perms_desc"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:fontFamily="@font/montserrat"
        android:typeface="normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slide_button"
        style="@style/MonsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/check"
        app:icon="@drawable/bolt"
        app:iconTint="@color/primary"
        android:backgroundTint="@color/white"
        android:textColor="@color/primary"
        app:cornerRadius="16dp"/>
</LinearLayout>
